# goit-py_web-hw-08

./: connect.py  models.py  pyproject.toml  query.py  seeds.py
Second_task/: .env  connect.py  consumer.py  docker-compose.yml  models.py  producer.py  seeds.py
