[project]
name = "goit-py-web-hw-08"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleksii",email = "user@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymongo[srv,tls] (>=4.13.2,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "mongoengine (>=0.29.1,<0.30.0)",
    "pika (>=1.3.2,<2.0.0)",
    "faker (>=37.5.3,<38.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
